# helios

./: .gitmodules  CMakeLists.txt
doxygen/: doxygen.conf.in
include/helios/: router.hpp  server.hpp
include/helios/db/: create.hpp
src/: CMakeLists.txt  router.cpp  router.hpp  server.cpp
src/api/: CMakeLists.txt  api.cpp  api.hpp  auth.cpp  auth.hpp  features.cpp  features.hpp  note.cpp  note.hpp  photograph.cpp  photograph.hpp  statistics.cpp  statistics.hpp
src/db/: CMakeLists.txt  auth.cpp  auth.hpp  cache.cpp  cache.hpp  create.cpp  jpeg_data.cpp  jpeg_data.hpp  note.cpp  note.hpp  photograph.cpp  photograph.hpp  statistics.cpp  statistics.hpp
src/exports/: CMakeLists.txt  exports.cpp  exports.hpp
src/main/: exports.cpp  server.cpp
src/server/: CMakeLists.txt  server.cpp  server.hpp
src/uri/: CMakeLists.txt  detail.cpp  detail.hpp  insert_photograph.cpp  insert_photograph.hpp  jpeg_image.cpp  jpeg_image.hpp  jpeg_image_fullsize.cpp  jpeg_image_fullsize.hpp  uri.cpp  uri.hpp
src/util/: CMakeLists.txt  scale.cpp  scale.hpp
static/: application.js  index.html  models.js  stacked_application.js  style.css
toolchain/: Default.cmake  RaspberryPi.cmake
web/: CMakeLists.txt  application.js  index.html  models.js  package.json  stacked_application.js  style.css
web/client/: application.js  index.js  ui.js
web/client/collection/: album.js  breadcrumb.js  location.js  locationphotographs.js  photographalbum.js  photographalbums.js  recentlytaken.js  tag.js  tagphotographs.js  uncategorised.js
web/client/form/: album.js  albumselect.js  alignedalbum.js  compactalbum.js  photograph.js
web/client/model/: album.js  breadcrumb.js  location.js  photograph.js  tag.js
web/client/page/: .home.js.swp  album.js  albums.js  home.js  locations.js  photograph.js  tags.js  upload.js
web/client/service/: api.js
web/client/view/: albumlist.js  locationlist.js  navigation.js  photographthumb.js  photographthumblist.js  taglist.js
web/less/: main.less
web/static/: index.html
